# PrimeDiscoveryEngine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: docker.yml  tests.yml
prime_discovery/: __init__.py  config.py  logging.py
prime_discovery/agents/: __init__.py
prime_discovery/api/: __init__.py  main.py
prime_discovery/cli/: __init__.py  main.py
prime_discovery/datasets/: __init__.py  features.py  loaders.py  primes.py
prime_discovery/engine/: __init__.py  discovery.py  generator.py  hypothesis.py
prime_discovery/evolution/: __init__.py  genetic.py
prime_discovery/experiments/: __init__.py
prime_discovery/symbolic/: __init__.py  expressions.py
prime_discovery/verifier/: __init__.py  checker.py  metrics.py
tests/: __init__.py  test_core.py  test_datasets.py  test_engine.py  test_generation.py  test_verifier.py
